tests/ui/error-codes/E0120.rs
trait MyTrait { fn foo(&self) {} }

impl Drop for dyn MyTrait {
              //~^ ERROR E0120
    fn drop(&mut self) {}

}

fn main() {}
